--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿cd c:\Users\Maheswara Achari\OneDrive\Desktop\age_gender_detection
-dir
-pip install -r requirements.txt
-python app.py
+﻿flask
+opencv-python
+pymongo
+gunicorn
